[package]
name = "meowhash"
version = "0.2.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Meow hash function"
repository = "https://github.com/bodil/meowhash-rs"
documentation = "https://docs.rs/meowhash"
readme = "README.md"
categories = ["algorithms", "no-std"]
keywords = ["meow", "hash", "digest"]
edition = "2018"

[dependencies]
digest = "0.8.0"
libc = { version = "0.2.67", optional = true }

[dev-dependencies]
proptest = "0.9.1"

[build-dependencies]
cc = { version = "1.0.50", optional = true }

[features]
ffi = ["libc", "cc"]
